// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn view should render correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 5,
                "justifyContent": "space-between",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 5,
                }
              }
            >
              <LogoSvg
                height={100}
                style={
                  {
                    "alignSelf": "center",
                  }
                }
                width={200}
              />
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontSize": 31,
                    "fontWeight": "700",
                    "textAlign": "center",
                  }
                }
              >
                Conecte-se à sua saúde
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Acesse sua conta
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      E-mail
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Senha
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      onChangeText={[Function]}
                      placeholder="Digite aqui sua senha"
                      secureTextEntry={true}
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                    <View
                      style={
                        {
                          "marginLeft": 5,
                          "zIndex": 100,
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "opacity": 1,
                          }
                        }
                      >
                        <EyeCloseSvg
                          height={20}
                          width={20}
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Acessar conta
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignIn view should render correctly with email 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 5,
                "justifyContent": "space-between",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 5,
                }
              }
            >
              <LogoSvg
                height={100}
                style={
                  {
                    "alignSelf": "center",
                  }
                }
                width={200}
              />
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontSize": 31,
                    "fontWeight": "700",
                    "textAlign": "center",
                  }
                }
              >
                Conecte-se à sua saúde
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Acesse sua conta
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      E-mail
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                      value="test@example.com"
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Senha
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      onChangeText={[Function]}
                      placeholder="Digite aqui sua senha"
                      secureTextEntry={true}
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                    <View
                      style={
                        {
                          "marginLeft": 5,
                          "zIndex": 100,
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "opacity": 1,
                          }
                        }
                      >
                        <EyeCloseSvg
                          height={20}
                          width={20}
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Acessar conta
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignIn view should render correctly with password 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 5,
                "justifyContent": "space-between",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 5,
                }
              }
            >
              <LogoSvg
                height={100}
                style={
                  {
                    "alignSelf": "center",
                  }
                }
                width={200}
              />
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontSize": 31,
                    "fontWeight": "700",
                    "textAlign": "center",
                  }
                }
              >
                Conecte-se à sua saúde
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Acesse sua conta
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      E-mail
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Senha
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      onChangeText={[Function]}
                      placeholder="Digite aqui sua senha"
                      secureTextEntry={true}
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                      value="123456"
                    />
                    <View
                      style={
                        {
                          "marginLeft": 5,
                          "zIndex": 100,
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "opacity": 1,
                          }
                        }
                      >
                        <EyeCloseSvg
                          height={20}
                          width={20}
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Acessar conta
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignIn view should render correctly with password with secure text entry off 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 5,
                "justifyContent": "space-between",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 5,
                }
              }
            >
              <LogoSvg
                height={100}
                style={
                  {
                    "alignSelf": "center",
                  }
                }
                width={200}
              />
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontSize": 31,
                    "fontWeight": "700",
                    "textAlign": "center",
                  }
                }
              >
                Conecte-se à sua saúde
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Acesse sua conta
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      E-mail
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Senha
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      onChangeText={[Function]}
                      placeholder="Digite aqui sua senha"
                      secureTextEntry={false}
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                    <View
                      style={
                        {
                          "marginLeft": 5,
                          "zIndex": 100,
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "opacity": 1,
                          }
                        }
                      >
                        <EyeOpenSvg
                          height={20}
                          width={20}
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Acessar conta
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
